--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -21,7 +21,6 @@ body,td {
 	padding: 0px;
 }
 
-
 .alignCenter {
 	text-align: center;
 }
@@ -129,7 +128,11 @@ body,td {
 	text-align: left;
 }
 
-.tituloRedPanel {
+.gwt-TitledPanel {
+	border: 1px solid #981836;
+}
+
+.gwt-TitledPanel .title {
 	width: 100% !IMPORTANT;
 	margin: 0px !IMPORTANT;
 	vertical-align: middle;
@@ -163,12 +166,12 @@ body,td {
 	overflow: auto;
 }
 
-.gwt-BuscarCuentaFilterForm .layout td, .gwt-CuentaForm .layout td {
+.layout td {
 	padding-bottom: 2px;
 	padding-top: 2px;
 }
 
-.gwt-BuscarCuentaFilterForm .layout td,.gwt-Label, .gwt-CuentaForm .layout td {
+.layout td, .gwt-Label {
 	font-family: Verdana, Geneva, Kalimati, sans-serif;
 	font-size: 11px;
 	font-weight: bold;
