--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -21,6 +21,7 @@ body,td {
 	padding: 0px;
 }
 
+
 .alignCenter {
 	text-align: center;
 }
@@ -93,13 +94,13 @@ body,td {
 
 .gwt-central-panel {
 	background-color: #DADADA;
-	/*	float: left;*/
+	float: left;
 	min-width: 100%;
 	padding: 0;
 	text-align: center;
 }
 
-.gwt-BuscarCuentaFilterForm,.gwt-BuscarCuentaResultPanel {
+.gwt-BuscarCuentaFilterForm,.gwt-BuscarCuentaResultPanel, .gwt-VerazFilterForm, gwt-VerazResultUI {
 	margin: 5px;
 	background-color: #F7F7F7;
 	background-image: url(images/sch_bkg.gif);
@@ -145,6 +146,7 @@ body,td {
 	font-family: Verdana, Geneva, Kalimati, sans-serif;
 	font-size: 11px;
 	font-weight: bold;
+	text-align: left;
 }
 
 .header td {
@@ -155,23 +157,23 @@ body,td {
 	line-height: 14px;
 }
 
-.gwt-BuscarCuentaResultTable td {
+.gwt-BuscarCuentaResultTable td, .gwt-VerazResultTable td  {
 	border-right: 1px solid #EBEBEB;
 	border-bottom: 1px solid #EBEBEB;
 	height: 24px;
 }
 
-.gwt-BuscarCuentaResultPanel .resultTableWrapper {
+.gwt-BuscarCuentaResultPanel .resultTableWrapper, .gwt-VerazResultUI .verazResultPanel  {
 	height: 200px;
 	overflow: auto;
 }
 
-.layout td {
+.gwt-BuscarCuentaFilterForm .layout td, .gwt-CuentaForm .layout td, .gwt-VerazFilterForm .layout td {
 	padding-bottom: 2px;
 	padding-top: 2px;
 }
 
-.layout td, .gwt-Label {
+.gwt-BuscarCuentaFilterForm .layout td,.gwt-Label, .gwt-CuentaForm .layout td {
 	font-family: Verdana, Geneva, Kalimati, sans-serif;
 	font-size: 11px;
 	font-weight: bold;
@@ -270,3 +272,67 @@ padding:0;
 text-align:left;
 width:48%;
 }
+
+.abmPiePanel {
+border:0 none;
+float:left;
+margin-left:2px;
+text-align:left;
+width:48%;
+}
+
+.gwt-LabelVeraz {
+background-color:transparent;
+float:left;
+font-family:Verdana;
+font-size:11px;
+font-weight:bold;
+text-align:left;
+text-indent:4px;
+width:100px;
+}
+
+.abmPanelVeraz {
+text-align: left;
+text-indent: 4px;
+border:1px solid #981836;
+background-color:#FFFFFF;
+margin-top:8px;
+border:1px solid #981836;
+float:left;
+margin-bottom:8px;
+width:100%;
+}
+
+.resultadoVerazAceptar {
+background:transparent url(images/icon-scoring-aceptado.jpg) no-repeat scroll 0 0;
+display:block;
+float:left;
+height:22px;
+margin-left:4px;
+padding-left:24px;
+width:74px;
+}
+
+.resultadoVerazRevisar {
+background:transparent url(images/icon-scoring-revisado.jpg) no-repeat scroll 0 0;
+display:block;
+float:left;
+height:22px;
+margin-left:4px;
+padding-left:24px;
+width:74px;
+}
+
+.resultadoVerazRechazar {
+background:transparent url(images/icon-scoring-rechazado.jpg) no-repeat scroll 0 0;
+display:block;
+float:left;
+height:22px;
+margin-left:4px;
+padding-left:24px;
+width:74px;
+}
+
+
+
