nuevo estilo para el popup de mensajes

--- a/src/main/java/ar/com/nextel/sfa/public/popups.css
+++ b/src/main/java/ar/com/nextel/sfa/public/popups.css
@@ -81,3 +81,11 @@ div.popFooter A,div.popFormButtons A {
 	text-align: center;
 	margin: 10px;
 }
+
+.gwt-CustomDialogBox .message{
+	text-align: center;
+	margin: 10px;
+	width: 300px;
+	height: 150px;
+	overflow: auto;
+}
