los botones no mostraban el mouse como pointer

--- a/src/main/java/ar/com/nextel/sfa/public/buttons.css
+++ b/src/main/java/ar/com/nextel/sfa/public/buttons.css
@@ -1,10 +1,14 @@
+.gwt-Button {
+	cursor: pointer;
+}
+
 .btn-first,.btn-prev,.btn-next,.btn-last {
 	width: 16px;
 	height: 16px;
 	background-image: url("images/page-arrows.gif");
 	border: none;
-	background-color:transparent;
-	background-repeat:no-repeat;
+	background-color: transparent;
+	background-repeat: no-repeat;
 	margin-right: 10px;
 }
 
@@ -29,14 +33,14 @@
 	height: 21px;
 	background-image: url("images/btn-bkg.gif");
 	border: none;
-	background-color:transparent;
-	background-repeat:no-repeat;
+	background-color: transparent;
+	background-repeat: no-repeat;
 	margin-right: 10px;
 	color: #A93F59;
-	font-weight:bold;
+	font-weight: bold;
 }
 
-.btn-menu{
+.btn-menu {
 	position: absolute;
 	top: 0px;
 	left: 50%;
