--- a/src/main/java/ar/com/nextel/sfa/public/buttons.css
+++ b/src/main/java/ar/com/nextel/sfa/public/buttons.css
@@ -29,15 +29,16 @@
 }
 
 .btn-bkg {
-	width: 79px;
-	height: 21px;
+	width: 80px;
+	height: 22px;
 	background-image: url("images/btn-bkg.gif");
 	border: none;
 	background-color: transparent;
 	background-repeat: no-repeat;
 	margin-right: 10px;
 	color: #A93F59;
-	font-weight: bold;
+	font-weight: 600;
+	font-size: 11px;
 }
 
 .btn-menu {
