cambios componente domicilio.

--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -221,6 +221,10 @@ A {
 	overflow: auto;
 }
 
+.gwt-BuscarCuentaResultPanel{
+	text-align: left;
+}
+
 .gwt-NormalizarDomicilioUI .resultTableScroll {
 	height: 150px;
 	overflow: scroll;
