cambios componente domicilio.

--- a/src/main/java/ar/com/nextel/sfa/public/icons.css
+++ b/src/main/java/ar/com/nextel/sfa/public/icons.css
@@ -44,6 +44,9 @@ rgm
 /*	margin-right: 10px; */
 }
 
+.icon-locked-other{
+   background-image: url("images/locked-others.gif");
+}
 
 .icon-cancel { background-position: 0 0;}
 .icon-copiar { background-position: -16 0;}
