--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -19,7 +19,10 @@ body,td,.normalText {
 }
 
 A {
+	color: black;
 	cursor: pointer;
+	font-family: Verdana, Arial, sans-serif;
+	font-size: 11px;
 }
 
 *,body {
@@ -49,12 +52,16 @@ A {
 	color: white;
 	font-weight: bold;
 }
-/** Estilos tablas */
-.TableHeader A:link,
-.TableHeader A:active,
-.TableHeader A:visited { color: #fff; text-decoration:none; }
 
-.TableHeader A:hover { text-decoration:underline; }
+/** Estilos tablas */
+.TableHeader A:link,.TableHeader A:active,.TableHeader A:visited {
+	color: #fff;
+	text-decoration: none;
+}
+
+.TableHeader A:hover {
+	text-decoration: underline;
+}
 
 .TableRow1 {
 	background-color: white;
@@ -72,8 +79,8 @@ A {
 .NoPointerTableRowSelected {
 	background-color: #EFDAE0;
 }
-/** Fin Estilos tablas */
 
+/** Fin Estilos tablas */
 .gwt-HeaderMenu .menu {
 	background-color: #981836;
 	background-image: url(images/toolbar/back-menu-bar.gif);
@@ -221,7 +228,7 @@ A {
 	overflow: auto;
 }
 
-.gwt-BuscarCuentaResultPanel{
+.gwt-BuscarCuentaResultPanel {
 	text-align: left;
 }
 
@@ -491,7 +498,7 @@ A {
 	margin: 16 0 40 0px;
 }
 
-.exportarExcelSS {
+.floatRight,.exportarExcelSS {
 	float: right;
 }
 
