--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -531,3 +531,27 @@ A {
 	margin-left: 27px;
 	width: 90px;
 }
+
+.gwt-ItemSolicitudDialog .topBar {
+	border-bottom: 1px #CCC solid;
+	padding: 5px; 
+	margin-bottom: 5px;
+	background-image: url(images/sch_bkg.gif);
+	background-repeat: repeat-x;
+	height: 25px;
+	width: 520px;
+}
+
+.reservaTelefonoWrapper {
+	height: 100px;
+	width:120;
+	margin-top:20px;
+	margin-left:100px;
+	margin-right:100px;
+	margin-bottom:20px;
+	overflow: auto;
+	border: 1px #CCC solid;
+}
+.reservaTelefonoWrapper TD{
+	text-align: center;
+}
