--- a/src/main/java/ar/com/nextel/sfa/public/buttons.css
+++ b/src/main/java/ar/com/nextel/sfa/public/buttons.css
@@ -46,8 +46,8 @@
 	top: 0px;
 	left: 50%;
 	margin-left: -25px;
-	background-image: url("images/btn-menu.gif");
+	background-image: url("images/menu.gif");
 	border: none;
-	height: 10px;
+	height: 18px;
 	width: 50px;
 }
