--- a/src/main/java/ar/com/nextel/sfa/public/measures.css
+++ b/src/main/java/ar/com/nextel/sfa/public/measures.css
@@ -11,6 +11,9 @@
 .m10 {margin: 10px}
 .m15 {margin: 15px}
 .m20 {margin: 20px}
+.m30 {margin: 30px}
+.m40 {margin: 40px}
+.m50 {margin: 50px}
 
 /* Top */
 .mt0  {margin-top: 0px;}
