estilos para la pantalla de Infocom (estrenando usuario de CVS)

--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -608,6 +608,21 @@ color:gray;
 font-weight:normal;
 }
 
+.infocomSimpleLink {
+text-decoration:underline;
+}
+
+.infocomTituloLabel {
+color:#A83C56;
+}
+
+.infocomDescripcionTable {
+	border-right: 1px solid #EBEBEB;
+	border-bottom: 1px solid #EBEBEB;
+	height: 24px;
+	text-align: left;
+}	
+
 /*.table-external {
 border:1px solid gray;
 clear:left;
