tmp style for debug

--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.css
@@ -621,7 +621,12 @@ color:#A83C56;
 	border-bottom: 1px solid #EBEBEB;
 	height: 24px;
 	text-align: left;
-}	
+}
+
+.oppDebugFont {
+color:white;
+font-weight:normal;
+}
 
 /*.table-external {
 border:1px solid gray;
